clusters/talos-cluster/cloudflare-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudflare-gateway
  namespace: cloudflare-gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cloudflare
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.maix.ovh"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: cloudflare-certificate
      allowedRoutes:
        namespaces:
          from: All
